feat: integrate Jekyll with AL-Go reference documentation
- Modify pages.yml to work alongside AL-Go DeployReferenceDocumentation workflow
- Create /reference/ placeholder for AL code documentation
- Add link to reference docs on landing page
- Document workflow integration in .github/WORKFLOWS.md
- Update setup guide with two-tier documentation structure

Both workflows now coexist peacefully:
- Jekyll deploys user docs to root (automatic on push)
- AL-Go deploys AL reference docs to /reference/ (manual workflow)

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -36,6 +36,24 @@ jobs:
           bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}"
         env:
           JEKYLL_ENV: production
+      
+      - name: Create reference docs placeholder
+        run: |
+          mkdir -p _site/reference
+          cat > _site/reference/index.html << 'EOF'
+          <!DOCTYPE html>
+          <html>
+          <head>
+            <meta charset="UTF-8">
+            <meta http-equiv="refresh" content="0; url=..">
+            <title>AL Reference Documentation</title>
+          </head>
+          <body>
+            <p>AL Reference Documentation will be available here after running the "Deploy Reference Documentation" workflow.</p>
+            <p>Redirecting to main page...</p>
+          </body>
+          </html>
+          EOF
           
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
