ALGO Settings to DE

--- a/.AL-Go/settings.json
+++ b/.AL-Go/settings.json
@@ -1,6 +1,6 @@
 {
   "$schema": "https://raw.githubusercontent.com/microsoft/AL-Go-Actions/v8.1/.Modules/settings.schema.json",
-  "country": "us",
+  "country": "de",
   "appFolders": [],
   "testFolders": [],
   "bcptTestFolders": []
