feat: add comprehensive README.md for each app
- Remove empty TECHNICAL_DOCUMENTATION.md files (10 files)
- Create detailed README.md for all 10 apps with:
  - Professional Jekyll front matter
  - Overview and feature descriptions
  - Installation instructions and prerequisites
  - Dependencies clearly listed
  - Configuration guides
  - Object ID ranges
  - Support and documentation links
- Update index.md: All app cards link to README pages
- Configure Jekyll in _config.yml:
  - Include app subdirectories for rendering
  - Exclude source code and build artifacts
- Each app now has its own documentation webpage

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,27 @@
 theme: jekyll-theme-cayman
 title: Business Central Apps
 description: Open-source Business Central extensions by walter75 Consulting
-show_downloads: true 
+show_downloads: true
+
+# Include subdirectories for rendering
+include:
+  - walter75 - OAuth 2.0
+  - walter75 - BaseApp Basic
+  - walter75 - Packages
+  - walter75 - BDE Terminal
+  - walter75 - Freight Prices
+  - walter75 - PrintNode
+  - walter75 - Sendcloud
+  - walter75 - Color Master
+  - walter75 - Contact Relations
+  - walter75 - XML Import
+
+# Exclude app build artifacts and source code
+exclude:
+  - "*.app"
+  - "*.flf"
+  - src/
+  - Translations/
+  - .ressources/
+  - app.json
+  - CHANGELOG.md 
