refactor(docs): restructure app documentation to docs/apps/ with light READMEs
- Created docs/apps/ directory with clean URLs for all 10 apps
  - oauth.md, baseapp.md, packages.md, bde-terminal.md, freight-prices.md
  - printnode.md, sendcloud.md, color-master.md, contact-relations.md, xml-import.md
- Replaced all app folder READMEs with light versions (~25 lines)
  - Quick Info section (ID Range, Dependencies, Version)
  - One-paragraph feature summary
  - Link to full documentation in docs/apps/
  - Basic links to Releases and Issues
- Updated index.md to link to docs/apps/ instead of app folders
- Simplified _config.yml to include only docs/ directory
- Created docs/apps/index.md as apps overview page

Benefits:
- Clean URLs: /docs/apps/oauth/ instead of /walter75%20-%20OAuth%202.0/
- Single source of truth: Only docs/apps/*.md need maintenance
- Better organization: All web documentation in one place
- GitHub convenience: Light READMEs still visible in folder browsing

--- a/_config.yml
+++ b/_config.yml
@@ -5,16 +5,7 @@ show_downloads: true
 
 # Include subdirectories for rendering
 include:
-  - walter75 - OAuth 2.0
-  - walter75 - BaseApp Basic
-  - walter75 - Packages
-  - walter75 - BDE Terminal
-  - walter75 - Freight Prices
-  - walter75 - PrintNode
-  - walter75 - Sendcloud
-  - walter75 - Color Master
-  - walter75 - Contact Relations
-  - walter75 - XML Import
+  - docs/
 
 # Exclude app build artifacts and source code
 exclude:
