feat(docs): add comprehensive navigation, search, versioning, changelog, and media structure
Implemented 7 major documentation enhancements:

1. Navigation Improvement
   - Added User Guide links to all 10 technical documentation files
   - Created '📖 Documentation' section with complete setup instructions

2. Landing Page Enhancement
   - Added User Guides grid section with 10 app links
   - Implemented responsive grid layout with hover effects
   - Reorganized documentation into 4 sections: User Guides, Technical, Project, Developer

3. Search & SEO Activation
   - Added jekyll-seo-tag for meta tags and SEO optimization
   - Added jekyll-sitemap for automatic sitemap generation
   - Added jekyll-feed for RSS/Atom feed support
   - Configured site URL, baseurl, and author metadata

4. Version Management
   - Created docs/versions/ directory structure
   - Added version overview page with support matrix
   - Created v27-specific documentation with app list, user guides, and release notes
   - Prepared structure for future version documentation

5. Navigation Bar
   - Added professional navigation bar to Jekyll theme
   - Implemented dropdown menus for Apps and Documentation sections
   - Full mobile responsiveness with flex layout
   - Includes Home, Apps (10 links), Documentation (3 links), Contributing, GitHub

6. Centralized Changelog
   - Created docs/changelog.md following Keep a Changelog format
   - Added v27.0.0 initial release notes
   - Documented release process and semantic versioning guidelines
   - Included upgrade guides and roadmap
   - Links to app-specific changelogs

7. Media Structure
   - Created docs/assets/ directory with images, videos, downloads subdirectories
   - Added app-specific subdirectories for each of 10 apps
   - Included comprehensive README.md with guidelines and best practices
   - Prepared for screenshot and video tutorial uploads

Benefits:
- Professional enterprise-grade documentation website
- Improved SEO and discoverabilit

--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,20 @@ theme: jekyll-theme-cayman
 title: Business Central Apps
 description: Open-source Business Central extensions by walter75 Consulting
 show_downloads: true
+url: https://walter75-consulting.github.io
+baseurl: /Business-Central-Apps
+
+# Plugins
+plugins:
+  - jekyll-seo-tag
+  - jekyll-sitemap
+  - jekyll-feed
+
+# SEO and metadata
+lang: en
+author:
+  name: walter75 Consulting
+  email: info@walter75.de
 
 # Include subdirectories for rendering
 include:
