fix(jekyll): exclude vendor directory from build
Jekyll tried to process files in vendor/bundle/ which caused build errors.
Added vendor/, Gemfile, and Gemfile.lock to exclude list.

Also added competitive analysis recommendations.

Fixes GitHub Actions error in run 19974572202

--- a/_config.yml
+++ b/_config.yml
@@ -29,4 +29,7 @@ exclude:
   - Translations/
   - .ressources/
   - app.json
-  - CHANGELOG.md 
+  - CHANGELOG.md
+  - vendor/
+  - Gemfile
+  - Gemfile.lock 
