fix(jekyll): add repository name to config
Jekyll-github-metadata plugin requires repository name.
Added 'repository: walter75-Consulting/Business-Central-Apps'.

Fixes GitHub Actions deploy error.

--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,7 @@ description: Open-source Business Central extensions by walter75 Consulting
 show_downloads: true
 url: https://walter75-consulting.github.io
 baseurl: /Business-Central-Apps
+repository: walter75-Consulting/Business-Central-Apps
 
 # Plugins
 plugins:
