fix(calc): enable test framework in AL-Go settings
- Add walter75 - Calculation.Test to testFolders
- Enable installTestFramework: true
- Enable installTestLibraries: true
- Fixes AL0185 errors in CI build (missing Library Assert)

Closes #13

--- a/.AL-Go/settings.json
+++ b/.AL-Go/settings.json
@@ -2,6 +2,10 @@
   "$schema": "https://raw.githubusercontent.com/microsoft/AL-Go-Actions/v8.1/.Modules/settings.schema.json",
   "country": "de",
   "appFolders": [],
-  "testFolders": [],
-  "bcptTestFolders": []
+  "testFolders": [
+    "walter75 - Calculation.Test"
+  ],
+  "bcptTestFolders": [],
+  "installTestFramework": true,
+  "installTestLibraries": true
 }
