fix(ci): add test libraries to installTestApps
- Add Tests-TestLibraries to installTestApps array
- This installs Library Assert and other test framework codeunits
- Fixes AL0185 'Library Assert is missing' error

Refs #13

--- a/.AL-Go/settings.json
+++ b/.AL-Go/settings.json
@@ -19,5 +19,8 @@
   ],
   "bcptTestFolders": [],
   "installTestFramework": true,
-  "installTestLibraries": true
+  "installTestLibraries": true,
+  "installTestApps": [
+    "Tests-TestLibraries"
+  ]
 }
