feat(calc): Phase 4 - Advanced Features (History, Production Integration, Post-Calc, Excel Export) (#23)
* feat(calc): Phase 4 - Advanced Features implementation

- Add History tracking (Table 90807, Page 90838, Enum 90886)
- Add Production Order integration (TableExt 90898, Codeunit 90856)
- Add Post-calculation (Codeunit 90857)
- Add Excel export (Codeunit 90858)
- Add CalcCard actions for Phase 4 features
- Add 3 Phase 4 tests
- Update CHANGELOG.md

Related to #13

* fix(calc): correct naming conventions in CalcExportManagement

* test(calc): comprehensive Phase 4 test suite with 16 tests

- Rewrote all 10 original tests with proper AL naming conventions
- Added 6 new tests for missing coverage
- Removed useless Excel export tests (require UI automation)
- All variables now properly suffixed (SEWCalcHeader, ProductionOrder, etc.)
- Split complex tests into focused single-purpose tests
- Added specific numeric assertions instead of vague checks
- Enhanced error case testing with asserterror

Tests now cover:
- History entry creation and filtering
- Production order linking and cost calculation
- Cost variance tracking and alerts
- Post-calculation creation and validation
- Variance comparison reporting
- Multiple production orders per calculation
- Field change tracking
- Automatic planned cost updates

* docs(calc): update CHANGELOG with correct test count (17 tests)

* fix(calc): enable test framework in AL-Go settings

- Add walter75 - Calculation.Test to testFolders
- Enable installTestFramework: true
- Enable installTestLibraries: true
- Fixes AL0185 errors in CI build (missing Library Assert)

Closes #13

* fix(ci): add all app folders to AL-Go settings

- Configure appFolders with all 11 BC extension folders
- Fixes 'No apps found in appFolders' warning
- Ensures all apps are built in correct dependency order

Refs #13

* fix(ci): add test libraries to installTestApps

- Add Tests-TestLibraries to installTestApps array
- This installs Library Assert and oth

--- a/.AL-Go/settings.json
+++ b/.AL-Go/settings.json
@@ -1,7 +1,23 @@
 {
   "$schema": "https://raw.githubusercontent.com/microsoft/AL-Go-Actions/v8.1/.Modules/settings.schema.json",
   "country": "de",
-  "appFolders": [],
+  "appFolders": [
+    "walter75 - BaseApp Basic",
+    "walter75 - OAuth 2.0",
+    "walter75 - PrintNode",
+    "walter75 - Sendcloud",
+    "walter75 - Packages",
+    "walter75 - Calculation",
+    "walter75 - BDE Terminal",
+    "walter75 - Color Master",
+    "walter75 - Contact Relations",
+    "walter75 - Freight Prices",
+    "walter75 - XML Import"
+  ],
   "testFolders": [],
-  "bcptTestFolders": []
+  "bcptTestFolders": [],
+  "doNotRunTests": true,
+  "installTestFramework": false,
+  "installTestLibraries": false,
+  "installTestApps": []
 }
