fix: add docs/apps/ to Jekyll include path

--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,7 @@ author:
 # Include subdirectories for rendering
 include:
   - docs/
+  - docs/apps/
 
 # Exclude app build artifacts and source code
 exclude:
